force-app/main/default/objects/Quote/fields/AFOG_NoLlamadasSeguimientoCompletadas__c.field-meta.xml
<CustomField>
    <fullName>AFOG_NoLlamadasSeguimientoCompletadas__c</fullName>
    <description>Este campo almacena el número de llamadas de seguimiento completadas en la cotización.</description>
    <inlineHelpText>Este campo almacena el número de llamadas de seguimiento completadas  en la cotización.</inlineHelpText>
    <label>No llamadas de seguimiento completadas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>