force-app/main/default/objects/Quote/fields/AFOG_NoLlamadasSeguimientoProgramadas__c.field-meta.xml
<CustomField>
    <fullName>AFOG_NoLlamadasSeguimientoProgramadas__c</fullName>
    <description>Este campo almacena el número de llamadas de seguimiento programadas en la cotización.</description>
    <inlineHelpText>Este campo almacena el número de llamadas de seguimiento programadas en la cotización.</inlineHelpText>
    <label>No. llamadas de seguimiento programadas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>