force-app/main/default/objects/Quote/fields/AM_Canon_Renting1__c.field-meta.xml
<CustomField>
    <fullName>AM_Canon_Renting1__c</fullName>
    <label>Canon mensual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>