force-app/main/default/objects/Quote/fields/AM_Cantidad_de_vehiculos__c.field-meta.xml
<CustomField>
    <fullName>AM_Cantidad_de_vehiculos__c</fullName>
    <label>Cantidad de vehículos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <color>#FFFFFF</color>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <color>#FFFFFF</color>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <color>#FFFFFF</color>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <color>#FFFFFF</color>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <color>#FFFFFF</color>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>