force-app/main/default/objects/Quote/fields/AM_Plazo_Renting3__c.field-meta.xml
<CustomField>
    <fullName>AM_Plazo_Renting3__c</fullName>
    <label>Plazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
                <color>#FFFFFF</color>
                <label>12</label>
            </value>
            <value>
                <fullName>24</fullName>
                <color>#FFFFFF</color>
                <label>24</label>
            </value>
            <value>
                <fullName>36</fullName>
                <color>#FFFFFF</color>
                <label>36</label>
            </value>
            <value>
                <fullName>48</fullName>
                <color>#FFFFFF</color>
                <label>48</label>
            </value>
            <value>
                <fullName>60</fullName>
                <color>#FFFFFF</color>
                <label>60</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>