force-app/main/default/objects/Quote/fields/Averiguo_sobre_otras_marcas__c.field-meta.xml
<CustomField>
    <fullName>Averiguo_sobre_otras_marcas__c</fullName>
    <inlineHelpText>Durante la compra de esta motocicleta, ¿Averiguó sobre otras marcas?</inlineHelpText>
    <label>¿Averiguó sobre otras marcas?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>