force-app/main/default/objects/Quote/fields/Como_se_entero_de_la_motocicleta__c.field-meta.xml
<CustomField>
    <fullName>Como_se_entero_de_la_motocicleta__c</fullName>
    <label>¿Cómo se enteró de la motocicleta?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Televisión</fullName>
            </value>
            <value>
                <fullName>Playa de ventas</fullName>
            </value>
            <value>
                <fullName>Publicidad exterior</fullName>
            </value>
            <value>
                <fullName>Publicidad impresa</fullName>
            </value>
            <value>
                <fullName>Cliente Cancelado</fullName>
            </value>
            <value>
                <fullName>Agendamiento Posventa</fullName>
            </value>
            <value>
                <fullName>Cliente Posventa</fullName>
            </value>
            <value>
                <fullName>Toma Empresarial</fullName>
            </value>
            <value>
                <fullName>Exhibición Centro Comercial</fullName>
            </value>
            <value>
                <fullName>Feria Local</fullName>
            </value>
            <value>
                <fullName>BTL Fanalca</fullName>
            </value>
            <value>
                <fullName>Inbox Facebook</fullName>
            </value>
            <value>
                <fullName>Formulario Financiación Progreser</fullName>
            </value>
            <value>
                <fullName>Formulario Facebook Progreser</fullName>
            </value>
            <value>
                <fullName>Formulario Facebook Honda</fullName>
            </value>
            <value>
                <fullName>Formulario Motos Sitio Web Honda</fullName>
            </value>
            <value>
                <fullName>Formulario Motos Sitio Web Inbound Honda</fullName>
            </value>
            <value>
                <fullName>Teléfono Concesionario</fullName>
            </value>
            <value>
                <fullName>Vitrina Virtual Mercado Libre</fullName>
            </value>
            <value>
                <fullName>Formulario Reweb Honda</fullName>
            </value>
            <value>
                <fullName>Formulario Reweb Financiación Progreser</fullName>
            </value>
            <value>
                <fullName>Formulario Reweb Facebook Honda</fullName>
            </value>
            <value>
                <fullName>Formulario Reweb Teléfono Honda</fullName>
            </value>
            <value>
                <fullName>Cliente Buena Paga</fullName>
            </value>
            <value>
                <fullName>Formulario Reweb Whatsapp Progreser</fullName>
            </value>
            <value>
                <fullName>Formulario Reweb Facebook Progreser</fullName>
            </value>
            <value>
                <fullName>Formulario Reweb Teléfono Progreser</fullName>
            </value>
            <value>
                <fullName>Inbox Facebook Progreser</fullName>
            </value>
            <value>
                <fullName>Línea telefónica Progreser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>