force-app/main/default/objects/Quote/fields/Creado_Prolibu__c.field-meta.xml
<CustomField>
    <fullName>Creado_Prolibu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Esta casilla marcada indicada que fue creada en Prolibu system</description>
    <label>Creado en Cotiza Tu Honda</label>
    <type>Checkbox</type>
</CustomField>