force-app/main/default/objects/Quote/fields/Cual_marca_averiguo_durante_la_compra__c.field-meta.xml
<CustomField>
    <fullName>Cual_marca_averiguo_durante_la_compra__c</fullName>
    <label>¿Cuál marca averiguó durante la compra?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Averiguo_sobre_otras_marcas__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hero</fullName>
            </value>
            <value>
                <fullName>AKT</fullName>
            </value>
            <value>
                <fullName>Bajaj</fullName>
            </value>
            <value>
                <fullName>Kawasaki</fullName>
            </value>
            <value>
                <fullName>Kymco</fullName>
            </value>
            <value>
                <fullName>Suzuki</fullName>
            </value>
            <value>
                <fullName>Yamaha</fullName>
            </value>
            <value>
                <fullName>TVS</fullName>
            </value>
            <value>
                <fullName>Sym</fullName>
            </value>
            <value>
                <fullName>Sigma</fullName>
            </value>
            <value>
                <fullName>Victory</fullName>
            </value>
            <value>
                <fullName>Royal Enfield</fullName>
            </value>
            <value>
                <fullName>Otras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>