force-app/main/default/objects/Quote/fields/Cuota_aproximada__c.field-meta.xml
<CustomField>
    <fullName>Cuota_aproximada__c</fullName>
    <label>Cuota aproximada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>