force-app/main/default/objects/Quote/fields/Descuento_Valor__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Valor__c</fullName>
    <label>Descuento (Valor)</label>
    <summarizedField>QuoteLineItem.Descuento_Valor__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>