force-app/main/default/objects/Quote/fields/DescuentoApro__c.field-meta.xml
<CustomField>
    <fullName>DescuentoApro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado por el proceso de aprobación para determinar si el descuento solicitado fue aprobado!</description>
    <label>DescuentoApro</label>
    <type>Checkbox</type>
</CustomField>