force-app/main/default/objects/Quote/fields/Entidad_Financiera__c.field-meta.xml
<CustomField>
    <fullName>Entidad_Financiera__c</fullName>
    <label>Entidad Financiera</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Pago__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Fondo nacional del ahorro</fullName>
            </value>
            <value>
                <fullName>Banco Agrario de Colombia S.A.</fullName>
            </value>
            <value>
                <fullName>Banco AV Villas S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Bancamia S.A.</fullName>
            </value>
            <value>
                <fullName>Banco BBVA Colombia S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Caja Social BCSC S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Colpatria S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Cooperativo Coopcentral</fullName>
            </value>
            <value>
                <fullName>Banco Davivienda S.A.</fullName>
            </value>
            <value>
                <fullName>Banco de Bogotá S.A.</fullName>
            </value>
            <value>
                <fullName>Banco de Occidente S.A.</fullName>
            </value>
            <value>
                <fullName>Banco GNB Sudameris S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Popular S.A.</fullName>
            </value>
            <value>
                <fullName>Banco ProCredit Colombia S.A.</fullName>
            </value>
            <value>
                <fullName>Banco CorpBanca Colombia S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Bancolombia S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Citibank Colombia S.A.</fullName>
            </value>
            <value>
                <fullName>Banco WWB S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Coomeva S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Finandina S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Falabella S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Pichincha S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Santander de Negocios Colombia S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Mundo Mujer S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Multibank S.A.</fullName>
            </value>
            <value>
                <fullName>Banco Compartir S.A.</fullName>
            </value>
            <value>
                <fullName>Fenalco</fullName>
            </value>
            <value>
                <fullName>Finamiga</fullName>
            </value>
            <value>
                <fullName>Crediorbe</fullName>
            </value>
            <value>
                <fullName>Sufi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>