force-app/main/default/objects/Quote/fields/Fecha_de_determinacion_del_precio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_determinacion_del_precio__c</fullName>
    <label>Fecha de determinación del precio</label>
    <type>Date</type>
</CustomField>