force-app/main/default/objects/Quote/fields/Fecha_de_validez__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_validez__c</fullName>
    <label>Fecha de validez</label>
    <type>Date</type>
</CustomField>