force-app/main/default/objects/Quote/fields/Fin_de_validez__c.field-meta.xml
<CustomField>
    <fullName>Fin_de_validez__c</fullName>
    <label>Fin de validez</label>
    <type>Date</type>
</CustomField>