force-app/main/default/objects/Quote/fields/Fuentes_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>Fuentes_de_contacto__c</fullName>
    <label>Fuentes de contacto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sala de Ventas</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Actividades Externas</fullName>
            </value>
            <value>
                <fullName>Postventa/Taller/Almacén</fullName>
            </value>
            <value>
                <fullName>Progreser</fullName>
            </value>
            <value>
                <fullName>BTL Canal Empresarial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>