force-app/main/default/objects/Quote/fields/Inicio_de_validez__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_validez__c</fullName>
    <label>Inicio de validez</label>
    <type>Date</type>
</CustomField>