force-app/main/default/objects/Quote/fields/Maximo_descuento_gerente_nacional__c.field-meta.xml
<CustomField>
    <fullName>Maximo_descuento_gerente_nacional__c</fullName>
    <label>Máximo descuento gerente nacional</label>
    <summarizedField>QuoteLineItem.Maximo_descuento_gerente_nacional__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Discount</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>