force-app/main/default/objects/Quote/fields/nodriza_json__c.field-meta.xml
<CustomField>
    <fullName>nodriza_json__c</fullName>
    <label>nodriza json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>