force-app/main/default/objects/Quote/fields/Nodriza_URL_de_seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Nodriza_URL_de_seguimiento__c</fullName>
    <label>Cotiza tu Honda URL de seguimiento</label>
    <type>Url</type>
</CustomField>