force-app/main/default/objects/Quote/fields/Nodriza_URL_pre_visualizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Nodriza_URL_pre_visualizaci_n__c</fullName>
    <label>Cotiza tu Honda URL pre visualización</label>
    <type>Url</type>
</CustomField>