force-app/main/default/objects/Quote/fields/Nombre_opp_cuenta_formulado__c.field-meta.xml
<CustomField>
    <fullName>Nombre_opp_cuenta_formulado__c</fullName>
    <formula>Opportunity.Nombre_cuenta_formulado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre opp cuenta formulado</label>
    <type>Text</type>
</CustomField>