force-app/main/default/objects/Quote/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <inlineHelpText>Hasta 270 caracteres</inlineHelpText>
    <label>Observaciones de la Cotización</label>
    <length>270</length>
    <type>LongTextArea</type>
</CustomField>