force-app/main/default/objects/Quote/fields/Observaciones_de_la_Solicitud_de_Factura__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_de_la_Solicitud_de_Factura__c</fullName>
    <label>Observaciones de la Solicitud de Factura</label>
    <length>270</length>
    <type>LongTextArea</type>
</CustomField>