force-app/main/default/objects/Quote/fields/Pendiente_por_aprobar_PC__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_por_aprobar_PC__c</fullName>
    <label>Pendiente por aprobar PC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>