force-app/main/default/objects/Quote/fields/Prueba_de_Manejo__c.field-meta.xml
<CustomField>
    <fullName>Prueba_de_Manejo__c</fullName>
    <label>Prueba de Manejo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>