force-app/main/default/objects/Quote/fields/Q_hizo_con_su_anterior_motocicleta__c.field-meta.xml
<CustomField>
    <fullName>Q_hizo_con_su_anterior_motocicleta__c</fullName>
    <label>¿Qué hizo con su anterior motocicleta?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vendida</fullName>
            </value>
            <value>
                <fullName>La conserva</fullName>
            </value>
            <value>
                <fullName>La tiene un familiar</fullName>
            </value>
            <value>
                <fullName>Ninguna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>