force-app/main/default/objects/Quote/fields/Quote_PDF_Generado__c.field-meta.xml
<CustomField>
    <fullName>Quote_PDF_Generado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se usa para verificar que el PDF de cotizacion haya sido generado antes de sincronizar la cotización</description>
    <label>Quote PDF Generado</label>
    <type>Checkbox</type>
</CustomField>