force-app/main/default/objects/Quote/fields/Realizo_consulta_de_precios__c.field-meta.xml
<CustomField>
    <fullName>Realizo_consulta_de_precios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Realizó consulta de precios</label>
    <type>Checkbox</type>
</CustomField>