force-app/main/default/objects/Quote/fields/Referencia_que_averiguo__c.field-meta.xml
<CustomField>
    <fullName>Referencia_que_averiguo__c</fullName>
    <label>Referencia que averiguó</label>
    <length>255</length>
    <type>Text</type>
</CustomField>