force-app/main/default/objects/Quote/fields/ReferenciaModelo__c.field-meta.xml
<CustomField>
    <fullName>ReferenciaModelo__c</fullName>
    <label>Referencia/Modelo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>